
** More english for user-defined conversions
User-defined conversions in pseudo-English now allow "const[ant] eval[uation]",
"const[ant] expr[ession]", and "const[ant] init[ialization]" for a storage
class.

** Removed `--interactive` & `-i` options
Removed these command-line options.  They've been in cdecl since the beginning,
but never seemed to have a justification.

** C23 `constexpr` help
Added missing `constexpr` to the help for C23.

** Missing C++ types man page
Added some missing C++23 types to the manual page.

** `reproducible` and `unsequenced` man page
Added missing `reproducible` and `unsequenced` to the manual page.


* Changes in Cdecl 13.0

** Better copy constructor support
Declarations like:

    c++decl> explain C(C const&)
    declare C as constructor (reference to constant C)

are now supported better.

** C23 `alignas`
In C23, `alignas` is now used instead of `_Alignas`.

** C23 `_BitInt(N)`
The `_BitInt(N)` type in C23 in now supported.

** C23 `bool`
In C23, `bool` is now used instead of `_Bool`.

** C23 `constexpr`
The `constexpr` storage class in C23 is now supported.

** C23 fixed type `enum`
Fixed-type enumerations in C23 are now supported.

** Digit separators
Digit separators are now supported.

** C23 `reproducible` & `unsequenced`
These C23 attributes are now supported.

** C23 `thread_local`
In C23, `thread_local` is now used instead of `_Thread_local`.

** C23 `true`, `false`, `nullptr`, `static_assert`, & `thread_local`
These are now also keywords in C23.

** C23 `typeof` & `typeof_unqual`
These C23 keywords are now recognized, but not supported by cdecl.

** More C++23 standard types
Added the standard C++23 types `std::bfloat16_t`, `std::float128_t`,
`std::float16_t`, `std::float32_t`, `std::float64_t`, `std::ospanstream`,
`std::spanbuf`, `std::spanstream`, `std::stacktrace`, `std::unexpect_t`,
`std::wospanstream`, `std::wspanbuf`, and `std::wspanstream`.

** Enumeration bit-fields
Enumerations in C++ can now be bit fields.
