@@ -1,0 +1,1 @@
+cdecl: "exit": invalid command (as a first argument); use --help or -h for help
